@@ -84,5 +84,8 @@ Rick "Minga" Redman and KoreLogic <mingakore@gmail.com> (@CrackMeIfYouCan)
 Brandon Chalk <brandon@casaba.com> (@brandoncasaba)
 * Kerberos Pre-Auth 17/18 kernel module, ported from @Fist0urs TGS kernel modules
 
+Jamie <jamie@blacktraffic.co.uk> (@pedantic_hacker)
+* module_12101.c - web2py pbkdf2 variant
+
 !!! All the package maintainer of hashcat !!!
 
