@@ -133,6 +133,7 @@ NVIDIA GPUs require "NVIDIA Driver" (418.56 or later) and "CUDA Toolkit" (10.1 o
 - PBKDF2-HMAC-SHA1
 - PBKDF2-HMAC-SHA256
 - PBKDF2-HMAC-SHA512
+- web2py PBKDF2-HMAC-SHA512
 - scrypt
 - phpass
 - Ansible Vault
